After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 729658 - gl: wrong negotiated caps when using eglimage
gl: wrong negotiated caps when using eglimage
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal blocker
: 1.3.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-05-06 16:19 UTC by Julien Isorce
Modified: 2014-05-08 08:22 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Julien Isorce 2014-05-06 16:19:24 UTC
videotestsrc ! gleffects ! glimagesink -v  prints:
"video/x-raw(memory:EGLImage)" between gleffects and glimagesink, whereas it
should be "video/x-raw(meta:GstVideoGLTextureUploadMeta)"

I already mentioned this problem here https://bugzilla.gnome.org/show_bug.cgi?id=728940#c8 but I think it should be in its own bug.

I'll investigate this one.
Comment 1 Matthew Waters (ystreet00) 2014-05-07 11:47:50 UTC
So, this is because the EGLImage caps is before the GstVideoGLTextureUploadMeta caps.
Comment 2 Matthew Waters (ystreet00) 2014-05-07 11:52:50 UTC
Mitigated by

commit a27589629d593972cd3c1c1f249c6d7c49ffdd53
Author: Matthew Waters <ystreet00@gmail.com>
Date:   Wed May 7 21:45:53 2014 +1000

    gl: advertise GstGLMemory usage in the caps as capsfeatures
    
    https://bugzilla.gnome.org/show_bug.cgi?id=729658
Comment 3 Julien Isorce 2014-05-08 08:22:20 UTC
Nice solution !  Thx. I was also wondering why there was a such difference between eglimage and gl texture in the features.

That could also allow to have external gst elements support memory:GLMemory .