gl: advertise GstGLMemory usage in the caps as capsfeatures

https://bugzilla.gnome.org/show_bug.cgi?id=729658